# tracegraph

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: auth.py  repos.py  routes.py
backend/src/core/: deps.py  json_util.py  llm.py  tree.py
backend/src/models/: schemas.py
backend/src/services/: ast_parser.py  auth.py  browser_agent.py  crawler.py  describer.py  github_app.py  github_fetch.py  github_repos.py  graph.py  graph_layers.py  ingest.py  jobs.py  pr_review.py  screenshot.py  storage.py
docs/: design.md  engineering.md  eval_and_scope.md  overview.md  sample_output.md  system_design.md
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/install/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: app-install-guard.tsx  install-form.tsx  login-form.tsx
frontend/components/dashboard/: analysis-tools.tsx  contribution-chart.tsx  crawl-live-feed.tsx  crawl-modal.tsx  graph-modal.tsx  ingest-modal.tsx  job-progress.tsx  live-crawl.tsx  pipeline-progress.tsx  profile-card.tsx  pull-requests-panel.tsx  repo-card.tsx  repo-header.tsx  topbar.tsx
frontend/components/landing/: blast-radius.tsx  connected-layers.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  pipeline-section.tsx
frontend/components/ui/: button.tsx  modal.tsx
frontend/hooks/: use-current-user.ts
frontend/lib/: api.ts  layout.ts
(+3 files in other folders)
